# spark-unilateral-exit

./: .gitignore  LICENSE  Makefile  README.md  flake.nix  package-lock.json  package.json  tsconfig.json  vitest.config.js  vitest.config.ts
.github/workflows/: ci.yml  spark-local-e2e.yml
docs/: mainnet-exit-case-study.md  mobile-integration-plan.md  mobile-ux-flow.md  recovery-runbook.md  withdraw-guide.md
examples/: recovery-bundle.example.json
scripts/: run-e2e.sh  spark-local-bitcoind29.override.yml  wait-for-spark-local.mjs
src/: auto-exit.ts  broadcast.js  broadcast.ts  bundle.js  bundle.ts  cli-input.js  cli-input.ts  cli.js  cli.ts  consolidate.ts  cpfp-funding.js  cpfp-funding.ts  cpfp.js  cpfp.ts  errors.ts  esplora.js  esplora.ts  planner.js  planner.ts  prepare-recovery.ts  recovery-bundle.js  recovery-bundle.ts  safe-files.ts  sign.js  sign.ts  spark-packages.js  spark-packages.ts  spark-wallet.ts  sweep.js  sweep.ts  tx-utils.ts  types.ts
src/operator/: exporter.ts  wire.ts  (+3 more)
test/: auto-exit.test.ts  broadcast.test.js  broadcast.test.ts  bundle.test.js  bundle.test.ts  cli-input.test.js  cli-input.test.ts  consolidate.test.ts  cpfp-funding.test.js  cpfp-funding.test.ts  cpfp.test.js  cpfp.test.ts  esplora.test.js  esplora.test.ts  planner.test.js  planner.test.ts  prepare-recovery.test.ts  recovery-bundle.test.js  recovery-bundle.test.ts  safe-files.test.ts  sign.test.js  sign.test.ts  spark-packages.test.js  spark-packages.test.ts  sweep.test.js  sweep.test.ts
tools/spark-recovery-bundle/: Cargo.toml
tools/spark-recovery-bundle/src/: main.rs
(+14 files in other folders)
